home and index styling, small adjustments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,7 +124,7 @@
 .browse-button a {
     text-decoration: none;
     color: #171616;
-    font-family: 'Oleo Script', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .browse-button a:hover {
