--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,8 +87,12 @@
 
 .welcome {
   text-align: center;
+}
+
+.welcome h1 {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
+  font-size: 3.5rem;
 }
 
 .home-logo {
@@ -129,6 +133,10 @@
 
 .browse-button a:hover {
   color: #f5f5f5;
+}
+
+.btn-primary:hover {
+  background-color: #312f2f;
 }
 
 /* WELCOME @MEDIA */
