--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,11 +27,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <div class='btn btn-secondary btn-lg btn-block browse-button'>
-        <%= link_to("Go To Marketplace", games_path) %>
-      </div>
-      <!-- Figure out how to get this one working -->
-      <!--<%= link_to("<button class='btn btn-secondary btn-lg btn-block browse-button'>Browse Games Marketplace</button>".html_safe, games_path) %>-->
+      <%= link_to "Go To Marketplace", games_path, class: "btn btn-primary btn-lg btn-block browse-button" %>
     </div>
   </div>
   
