--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,7 +131,7 @@
     font-family: 'Nunito Sans', sans-serif;
 }
 
-.btn-primary:hover {
+.btn-secondary:hover {
   background-color: #312f2f;
 }
 
