start making cards for games

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -21,11 +21,27 @@
 </div>
 
 <!-- Game Listings Cards -->
+<% @games.each do |game| %>
 
+<div class="card" style="width: 18rem;">
+  <div class="card-img-top index-cover">
+    <%= image_tag game.cover.thumb.url%>
+  </div>
+  <div class="card-body">
+    <h4 class="card-title index-title">
+      <%= link_to game.title, game %>
+    </h4>
+    <h5 class="card-subtitle mb-2 text-muted index-price">
+    Price: <%= game.price %>
+    </h5>
+  </div>
+</div>
 
+<% end %>
+
+<!-- Games Index Table -->
 <table class="table game-listings">
   <thead>
-    <!-- Figure out what to do with these? -->
     <tr>
       <th scope="col">Cover</th>
       <th scope="col">Game</th>
