--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -23,7 +23,7 @@
 <!-- Game Listings Cards -->
 <% @games.each do |game| %>
 
-<div class="card" style="width: 18rem;">
+<div class="card games-index" style="width: 18rem;">
   <div class="card-img-top index-cover">
     <%= image_tag game.cover.thumb.url%>
   </div>
