--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,10 @@
   box-sizing: border-box;
 }
 
+.row {
+  margin: 0;
+}
+
 /* NAV BAR */
 
 .nav-container {
@@ -148,20 +152,61 @@
 /* GAMES INDEX */
 
 .card {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
+  // display: flex;
+  // flex-wrap: wrap;
+  // flex-direction: column;
+  // justify-content: flex-start;
+  // align-items: center;
   background-color: #312f2f;
-  width: 15rem;
+  width: 17rem;
+  height: 20rem;
+  padding: 5%;
+  border: solid;
+  border-color: #f5f5f5;
+  margin: 25px;
+}
+
+.upload-button {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 35px;
 }
 
 .games-index {
+  display: flex; 
+  // flex-wrap: wrap;
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
   text-align: center;
-  padding-bottom: 5%;
 }
+
+.games-index-title {
+  font-family: 'Nunito Sans', 'sans-serif';
+  font-weight: 800;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.games-index-title a {
+  font-weight: 800;
+  color: #d11f66;
+  text-decoration: none;
+}
+
+.index-title a:hover {
+  color: #f5f5f5;
+}
+
+.index-price-label {
+  font-weight: 800;
+  color: #f5f5f5
+}
+
+.index-price {
+  color: #f5f5f5;
+}
+
+/* Search Bar Area */
 
 .all-games-link a {
   color: #f5f5f5;
@@ -198,41 +243,6 @@
 
 .sort-filter a:hover {
   color: #d11f66;
-}
-
-.game-listings {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  background-color: #312f2f;
-  padding-top: 25px;
-}
-
-.index-title a {
-  font-weight: 800;
-  color: #d11f66;
-  text-decoration: none;
-}
-
-.index-title a:hover {
-  color: #f5f5f5;
-}
-
-.index-price-label {
-  font-weight: 800;
-  color: #f5f5f5
-}
-
-.index-price {
-  color: #d11f66;
-}
-
-.upload-button {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 35px;
 }
 
 /* BODY */
