--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,25 +151,6 @@
 
 /* GAMES INDEX */
 
-.games-index-title a {
-  font-weight: 800;
-  color: #d11f66;
-  text-decoration: none;
-}
-
-.index-title a:hover {
-  color: #f5f5f5;
-}
-
-.index-price-label {
-  font-weight: 800;
-  color: #f5f5f5
-}
-
-.index-price {
-  color: #f5f5f5;
-}
-
 .index-row {
   display: flex;
   justify-content: center;
@@ -203,7 +184,36 @@
   font-family: 'Nunito Sans', 'sans-serif';
   font-weight: 800;
   text-align: center;
-  padding-bottom: 3%;
+  padding-bottom: 2%;
+}
+
+.index-title a  {
+  font-weight: 800;
+  color: #d11f66;
+  text-decoration: none;
+}
+
+.index-title  a:hover {
+  color: #f5f5f5;
+}
+
+.index-price-label {
+  font-weight: 800;
+  color: #f5f5f5
+}
+
+.index-price {
+  color: #f5f5f5;
+}
+
+.card-edit a, .card-destroy a {
+  font-weight: 400;
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
+.card-edit a:hover, .card-destroy a:hover {
+  color: #d11f66;
 }
 
 
