--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -31,7 +31,7 @@
 <!-- Game Listings Cards -->
 <div class="row index-row">
   <% @games.each do |game| %>
-    <div class="col-md-3">    
+    <div class="col-lg-3">    
       <div class="card games-index">
         <div class="card-img-top index-cover">
           <%= image_tag game.cover.thumb.url%>
