--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,12 +158,12 @@
 
 .card {
   background-color: #312f2f;
+  margin: 50px;
   width: 17rem;
   height: 20rem;
   padding: 5%;
   border: solid;
   border-color: #f5f5f5;
-  margin: 25px;
 }
 
 .upload-button {
@@ -273,6 +273,7 @@ footer {
   background-color: #312f2f;
   font-family: 'Nunito Sans', sans-serif;
   color: #f5f5f5;
+  margin-top: 5rem;
   padding: 10px;
 }
 
