--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -31,17 +31,17 @@
 <!-- Game Listings Cards -->
 <div class="row index-row">
   <% @games.each do |game| %>
-    <div class="col-lg-3">    
+    <div class="col-xs-3 card-deck">    
       <div class="card games-index">
         <div class="card-img-top index-cover">
           <%= image_tag game.cover.thumb.url%>
         </div>
         <div class="card-body">
-          <h2 class="card-title index-title">
+          <h4 class="card-title index-title">
             <%= link_to game.title, game %>
-          </h2>
+          </h4>
           <div class="card-subtitle mb-2 index-price">
-            <span class="index-price-label">Price:</span> <h4>$<%= game.price %></h4>
+            <span class="index-price-label">Price:</span> <h6>$<%= game.price %></h6>
             <% if game.user_id == current_user.try(:id) %>
               <span class="card-edit"><%=link_to 'Edit', edit_game_path(game) %> | </span>
               <span class="card-destroy"><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></span>
