--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,12 +158,13 @@
 
 .card {
   background-color: #312f2f;
-  margin: 50px;
+  margin: 1rem;
   width: 17rem;
   height: 20rem;
   padding: 5%;
-  border: solid;
-  border-color: #f5f5f5;
+  border-top: solid;
+  border-top-width: 2rem;
+  border-top-color: #d11f66;
 }
 
 .upload-button {
@@ -172,7 +173,7 @@
   padding-bottom: 35px;
 }
 
-.games-index {
+.games-listing {
   display: flex; 
   align-content: center;
   font-family: 'Nunito Sans', sans-serif;
