--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -15,7 +15,7 @@
     <%= @game.description %>
   </p>
 
-<!-- Stripe payments -->
+  <!-- Stripe payments -->
   <div class='stripe-payments'>
     <% @amount = @game.price * 100 %>
     <%= form_tag charges_path do %>
@@ -31,25 +31,27 @@
       </label>
     </article>
 
-  <!-- This ensures that users cannot buy their own games -->
-    <% game = @game.user_id %>
-    <% user = current_user.id %>
-    <% unless game == user %>
-  <!-- This is the stripe payment button -->
-      <%= hidden_field_tag "game_id", "#{@game.id}" %>
-      <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
-        class: 'stripe-button',
-        data: {
-        key: ENV["STRIPE_PUBLISHABLE_KEY"],
-        amount: @amount,
-        name: "flrish",
-        description: @game.title,
-        image: "https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true",
-        locale: "auto",
-        currency: "aud"} %>
+    <!-- Ensures that users cannot buy their own games -->
+    <% unless @game.user == current_user %>
+      <!-- Ensures only logged in users can access the stripe pay button -->
+      <% if user_signed_in? %>
+        <!-- Stripe payment button -->
+        <%= hidden_field_tag "game_id", "#{@game.id}" %>
+        <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
+          class: 'stripe-button',
+          data: {
+          key: ENV["STRIPE_PUBLISHABLE_KEY"],
+          amount: @amount,
+          name: "flrish",
+          description: @game.title,
+          image: "https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true",
+          locale: "auto",
+          currency: "aud"} %>
+        <% end %>
       <% end %>
     <% end %>
   </div>
+
   <!-- Only owners of games can edit games, this hides the button for non-sellers -->
   <% if @game.user_id == current_user.try(:id)  %>
   <%= link_to 'Edit', edit_game_path(@game) %> |
