--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,9 @@
   background-color: #d11f66;
   height: 5rem;
   padding: 3%;
-  /*box-shadow: 0px -26px 69px 13px rgba(245,245,245,1);*/
+  -webkit-box-shadow: 0px 9px 10px 0px rgba(49,47,47,1);
+  -moz-box-shadow: 0px 9px 10px 0px rgba(49,47,47,1);
+  box-shadow: 0px 9px 10px 0px rgba(49,47,47,1);
 }
 
 .nav_container li {
