--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -267,12 +267,16 @@
 
 /* SHOW GAME */
 
-.show-game-desc {
+.show-cover {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.show-content {
+  
 }
 
 .show-row {
