--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,60 +7,65 @@
       <%= image_tag @game.cover.large.url %>
     </p>
   </div>
-  <div class="col-m-6 show-title">
-    <h1>
-      <%= @game.title %>
-    </h1>
-  </div>
-  <div class="col-m-6 show-desc">
-    <p>
-      <strong>Description:</strong>
-      <%= @game.description %>
-    </p>
-  </div>
+  <div class="col-m-6 show-content">
+    <div class="show-title">
+      <h1>
+        <%= @game.title %>
+      </h1>
+    </div>
+    <div class="show-desc">
+      <p>
+        <strong>Description:</strong>
+        <%= @game.description %>
+      </p>
+    </div>
 
-  <!-- Stripe payments -->
-  <div class='stripe-button'>
-    <% @amount = @game.price * 100 %>
-    <%= form_tag charges_path do %>
-    <article>
-      <% if flash[:error].present? %>
-        <div id="error_explanation">
-          <p><%= flash[:error] %></p>
+    <!-- Stripe payments -->
+    <div class='stripe-button'>
+      <% @amount = @game.price * 100 %>
+      <%= form_tag charges_path do %>
+      <article>
+        <% if flash[:error].present? %>
+          <div id="error_explanation">
+            <p><%= flash[:error] %></p>
+          </div>
+        <% end %>
+        <div class="show-price">
+          <label>
+            <span><strong>Price: </strong>$<%= @game.price %></span>
+          </label>
         </div>
-      <% end %>
-      <div class="col-m-4 show-price">
-        <label>
-          <span><strong>Price: </strong>$<%= @game.price %></span>
-        </label>
-      </div>
-    </article>
+      </article>
 
-    <!-- Ensures that users cannot buy their own games -->
-    <% unless @game.user == current_user %>
-      <!-- Ensures only logged in users can access the stripe pay button -->
-      <% if user_signed_in? %>
-        <!-- Stripe payment button -->
-        <%= hidden_field_tag "game_id", "#{@game.id}" %>
-        <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
-          class: 'stripe-button',
-          data: {
-          key: ENV["STRIPE_PUBLISHABLE_KEY"],
-          amount: @amount,
-          name: "flrish",
-          description: @game.title,
-          image: "https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true",
-          locale: "auto",
-          currency: "aud"} %>
+      <!-- Ensures that users cannot buy their own games -->
+      <% unless @game.user == current_user %>
+        <!-- Ensures only logged in users can access the stripe pay button -->
+        <% if user_signed_in? %>
+          <!-- Stripe payment button -->
+          <%= hidden_field_tag "game_id", "#{@game.id}" %>
+          <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
+            class: 'stripe-button',
+            data: {
+            key: ENV["STRIPE_PUBLISHABLE_KEY"],
+            amount: @amount,
+            name: "flrish",
+            description: @game.title,
+            image: "https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true",
+            locale: "auto",
+            currency: "aud"} %>
+          <% end %>
         <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
 
-  <!-- Only owners of games can edit games, this hides the button for non-sellers -->
-  <% if @game.user_id == current_user.try(:id)  %>
-  <%= link_to 'Edit', edit_game_path(@game) %> |
-  <% end %>
-  <%= link_to 'Back', games_path %>
+    <!-- Only owners of games can edit games, this hides the button for non-sellers -->
+    <div class="show-user-buttons">
+      <% if @game.user_id == current_user.try(:id)  %>
+      <%= link_to 'Edit', edit_game_path(@game) %> |
+      <% end %>
+      <%= link_to 'Back', games_path %>
+    </div>
+
+  </div>
 
 </div>
