start css game show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -276,7 +276,12 @@
 }
 
 .show-content {
-  
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: flex-start;
 }
 
 .show-row {
