rearrange game show content, add margin to content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -279,9 +279,9 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: center;
-  align-content: center;
   align-items: flex-start;
+  justify-content: center;
+  margin-left: 2rem;
 }
 
 .show-row {
