show content arrange

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -28,7 +28,7 @@
       <% end %>
       <div class="show-price">
         <label>
-          <h4><strong>Price </strong>$<%= @game.price %></h4>
+          <p><strong>Price </strong>$<%= @game.price %></p>
         </label>
       </div>
     </article>
@@ -36,7 +36,6 @@
     <!-- Game Description -->
     <div class="show-desc">
       <p>
-        <strong>About the game:</strong>
         <%= @game.description %>
       </p>
     </div>  
