--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -280,7 +280,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: baseline;
   margin-left: 2rem;
 }
 
