style game show title

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -275,6 +275,12 @@
   align-items: center;
 }
 
+.show-title {
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 800;
+  color: #d11f66;
+}
+
 .show-content {
   display: flex;
   flex-wrap: wrap;
