--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -13,7 +13,7 @@
   <div class="col-m-8 show-content">
     <div class="show-title">
       <h1>
-        <%= @game.title %>
+        <%= @game.title.upcase %>
       </h1>
     </div>
 
