--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,6 @@
   </body>
 
   <footer>
-    <div class='portfolio'> <a href='https://rhyswoodberry.github.io/'>Portfolio</a></div> |
-    <div class='copyright'> &copy; 2018 Rhys Brian Woodberry</div> |
-    <div class='ghub'> <a href='https://github.com/rhyswoodberry'>GitHub</a></div>
+    <%= render 'shared/footer'%>
   </footer>
 </html>
