--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,8 +75,6 @@
   margin-left: 3%;
 }
 
-/* NAV BAR @MEDIA */
-
 @media screen and (max-width: 600px) {
   .nav_container {
     flex-wrap: wrap;
@@ -146,9 +144,6 @@
   background-color: #312f2f;
 }
 
-
-/* WELCOME @MEDIA */
-
 @media screen and (max-width: 500px) {
   .home-logo img {
     width: 300px;
@@ -181,20 +176,36 @@
   padding-bottom: 35px;
 }
 
+.new-game {
+  align-items: center;
+  background-color: #d11f66;
+  border: none;
+}
+
+.new-game a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-family: 'Nunito Sans', sans-serif;
+}
 
 .games-listing {
   display: flex; 
   align-content: center;
   font-family: 'Nunito Sans', sans-serif;
-  font-weight: 800;
   text-align: center;
 }
 
-.games-index-title {
-  font-family: 'Nunito Sans', 'sans-serif';
-  font-weight: 800;
+.games-index-title h1 {
+  font-family: 'Oleo Script', 'sans-serif';
+  font-size: 85px;
   text-align: center;
   padding-bottom: 2%;
+}
+
+@media screen and (max-width: 600px) {
+  .games-index-title h1 {
+    font-size: 65px;
+  }
 }
 
 .index-title a  {
