change index card styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,13 +218,12 @@
   color: #f5f5f5;
 }
 
-.index-price-label {
-  font-weight: 800;
-  color: #f5f5f5
-}
-
 .index-price {
   color: #f5f5f5;
+}
+
+.index-price-label {
+  font-size: 13px;
 }
 
 .card-edit a, .card-destroy a {
