update portfolio link

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
-  <div class='portfolio'> <a href='https://rhyswoodberry.github.io/'>Portfolio</a></div> |
+  <div class='portfolio'> <a href='http://rhyspec.me'>Portfolio</a></div> |
   <div class='copyright'> &copy; 2018 Rhys Brian Woodberry</div> |
   <div class='ghub'> <a href='https://github.com/rhyswoodberry'>GitHub</a></div>
