--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="row show-row">
+<%# <div class="row show-row"> %>
 
   <!-- Game Cover Image -->
   <div class="col-m-4 show-cover">
@@ -71,4 +71,4 @@
 
   </div>
 
-</div>
+<%# </div> %>
