--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="row">
+<div class="show-row row">
 
   <!-- Game Cover Image -->
   <div class="show-cover col-md-auto">
