format games show page

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -9,7 +9,9 @@
     </p>
   </div>
 
+  <!-- Content to the right of cover image -->
   <div class="show-content-right col-md-auto">
+  
     <!-- Title -->
     <div class="show-title">
       <h1>
