--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -308,6 +308,8 @@
   font-weight: 800;
   color: #d11f66;
   font-size: 65px;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .show-desc {
@@ -329,9 +331,15 @@
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 936px) {
   .show-title h1 {
     font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 445px) {
+  .show-title {
+    text-align: center;
   }
 }
 
@@ -339,6 +347,10 @@
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
   font-size: 25px;
+}
+
+.stripe-button {
+  padding: 0.7rem 0rem;
 }
 
 .show-user-buttons a {
